tests/negative/regression/r0.orng
const a: a.Float() = 0